# mle-misc

./: README.md  continue.config.json  docker-compose.yaml  pyproject.toml
hg/: dataset.ipynb  init.ipynb  tokenize.ipynb  transformer.ipynb
scripts/: ollama-api.json
