[tool.poetry]
name = "mle-misc"
version = "0.1.0"
description = ""
authors = ["bangyuwen <bangyuwen@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.38.2"
ipykernel = "^6.29.3"
torch = "^2.2.1"
datasets = "^2.18.0"
matplotlib = "^3.8.3"
zstandard = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
